parse.output
Grammar

    0 $accept: start $end

    1 start: file_input
    2      | encoding_decl
    3      | single_input

    4 single_input: NEWLINE
    5             | stmt

    6 file_input: star_NEWLINE_stmt ENDMARKER

    7 pick_NEWLINE_stmt: NEWLINE
    8                  | stmt

    9 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
   10                  | %empty

   11 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT dotted_name NEWLINE

   13 opt_arglist: arglist
   14            | %empty

   15 decorators: decorator decorators
   16           | decorator

   17 decorated: decorators classdef
   18          | decorators funcdef

   19 funcdef: DEF NAME parameters COLON suite

   20 parameters: LPAR varargslist RPAR
   21           | LPAR RPAR

   22 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   23            | fpdef opt_EQUAL_test star_COMMA_fpdef

   24 opt_EQUAL_test: EQUAL test
   25               | %empty

   26 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   27                 | %empty

   28 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   29                    | %empty

   30 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   31                     | DOUBLESTAR NAME

   32 fpdef: NAME
   33      | LPAR fplist RPAR

   34 fplist: fpdef star_fpdef_notest

   35 stmt: simple_stmt
   36     | compound_stmt

   37 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   38 small_stmt: expr_stmt
   39           | print_stmt
   40           | del_stmt
   41           | pass_stmt
   42           | flow_stmt
   43           | import_stmt
   44           | global_stmt
   45           | exec_stmt
   46           | assert_stmt

   47 expr_stmt: testlist augassign pick_yield_expr_testlist
   48          | testlist star_EQUAL

   49 pick_yield_expr_testlist: yield_expr
   50                         | testlist

   51 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   52           | %empty

   53 augassign: PLUSEQUAL
   54          | MINEQUAL
   55          | STAREQUAL
   56          | SLASHEQUAL
   57          | PERCENTEQUAL
   58          | AMPEREQUAL
   59          | VBAREQUAL
   60          | CIRCUMFLEXEQUAL
   61          | LEFTSHIFTEQUAL
   62          | RIGHTSHIFTEQUAL
   63          | DOUBLESTAREQUAL
   64          | DOUBLESLASHEQUAL

   65 print_stmt: PRINT opt_test
   66           | PRINT RIGHTSHIFT test opt_test_2

   67 opt_test: test star_COMMA_test
   68         | %empty

   69 opt_test_2: plus_COMMA_test
   70           | %empty

   71 del_stmt: DEL exprlist

   72 pass_stmt: PASS

   73 flow_stmt: break_stmt
   74          | continue_stmt
   75          | return_stmt
   76          | raise_stmt
   77          | yield_stmt

   78 break_stmt: BREAK

   79 continue_stmt: CONTINUE

   80 return_stmt: RETURN testlist
   81            | RETURN

   82 yield_stmt: yield_expr

   83 raise_stmt: RAISE test opt_test_3
   84           | RAISE

   85 opt_COMMA_test: COMMA test
   86               | %empty

   87 opt_test_3: COMMA test opt_COMMA_test
   88           | %empty

   89 import_stmt: import_name
   90            | import_from

   91 import_name: IMPORT dotted_as_names

   92 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   93            | FROM plus_DOT IMPORT pick_STAR_import

   94 star_DOT: DOT star_DOT
   95         | %empty

   96 plus_DOT: DOT plus_DOT
   97         | DOT

   98 pick_STAR_import: STAR
   99                 | LPAR import_as_names RPAR
  100                 | import_as_names

  101 import_as_name: NAME AS NAME
  102               | NAME

  103 dotted_as_name: dotted_name AS NAME
  104               | dotted_name

  105 import_as_names: import_as_name star_COMMA_import_as_name

  106 dotted_as_names: dotted_as_name
  107                | dotted_as_names COMMA dotted_as_name

  108 dotted_name: NAME
  109            | dotted_name DOT NAME

  110 global_stmt: global_stmt COMMA NAME
  111            | GLOBAL NAME

  112 exec_stmt: EXEC expr IN test opt_COMMA_test
  113          | EXEC expr

  114 assert_stmt: ASSERT test COMMA test
  115            | ASSERT test

  116 compound_stmt: if_stmt
  117              | while_stmt
  118              | for_stmt
  119              | try_stmt
  120              | with_stmt
  121              | funcdef
  122              | classdef
  123              | decorated

  124 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  125        | IF test COLON suite star_ELIF

  126 star_ELIF: ELIF test COLON suite star_ELIF
  127          | %empty

  128 while_stmt: WHILE test COLON suite ELSE COLON suite
  129           | WHILE test COLON suite

  130 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  131         | FOR exprlist IN testlist COLON suite

  132 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  133         | TRY COLON suite FINALLY COLON suite

  134 plus_except: except_clause COLON suite plus_except
  135            | except_clause COLON suite

  136 opt_ELSE: ELSE COLON suite
  137         | %empty

  138 opt_FINALLY: FINALLY COLON suite
  139            | %empty

  140 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  141 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  142                     | %empty

  143 with_item: test AS expr
  144          | test

  145 except_clause: EXCEPT test opt_AS_COMMA
  146              | EXCEPT

  147 pick_AS_COMMA: AS
  148              | COMMA

  149 opt_AS_COMMA: pick_AS_COMMA test
  150             | %empty

  151 suite: simple_stmt
  152      | NEWLINE INDENT plus_stmt DEDENT

  153 plus_stmt: stmt plus_stmt
  154          | stmt

  155 testlist_safe: old_test plus_COMMA_old_test
  156              | old_test

  157 old_test: or_test
  158         | old_lambdef

  159 old_lambdef: LAMBDA varargslist COLON old_test
  160            | LAMBDA COLON old_test

  161 test: or_test opt_IF_ELSE
  162     | lambdef

  163 opt_IF_ELSE: IF or_test ELSE test
  164            | %empty

  165 or_test: and_test
  166        | or_test OR and_test

  167 and_test: not_test
  168         | and_test AND not_test

  169 not_test: NOT not_test
  170         | comparison

  171 comparison: expr
  172           | comparison comp_op expr

  173 comp_op: LESS
  174        | GREATER
  175        | EQEQUAL
  176        | GREATEREQUAL
  177        | LESSEQUAL
  178        | GRLT
  179        | NOTEQUAL
  180        | IN
  181        | NOT IN
  182        | IS
  183        | IS NOT

  184 expr: xor_expr
  185     | expr BAR xor_expr

  186 xor_expr: and_expr
  187         | xor_expr CIRCUMFLEX and_expr

  188 and_expr: shift_expr
  189         | and_expr AMPERSAND shift_expr

  190 shift_expr: arith_expr
  191           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  192 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  193                          | RIGHTSHIFT

  194 arith_expr: term
  195           | arith_expr pick_PLUS_MINUS term

  196 pick_PLUS_MINUS: PLUS
  197                | MINUS

  198 term: factor
  199     | term pick_multop factor

  200 pick_multop: STAR
  201            | SLASH
  202            | PERCENT
  203            | DOUBLESLASH

  204 factor: pick_unop factor
  205       | power

  206 pick_unop: PLUS
  207          | MINUS
  208          | TILDE

  209 power: atom star_trailer DOUBLESTAR factor
  210      | atom star_trailer

  211 star_trailer: trailer star_trailer
  212             | %empty

  213 atom: LPAR opt_yield_test RPAR
  214     | LSQB opt_listmaker RSQB
  215     | LBRACE opt_dictorsetmaker RBRACE
  216     | BACKQUOTE testlist1 BACKQUOTE
  217     | NAME
  218     | NUMBER
  219     | plus_STRING

  220 pick_yield_expr_testlist_comp: yield_expr
  221                              | testlist_comp

  222 opt_yield_test: pick_yield_expr_testlist_comp
  223               | %empty

  224 opt_listmaker: listmaker
  225              | %empty

  226 opt_dictorsetmaker: dictorsetmaker
  227                   | %empty

  228 plus_STRING: STRING plus_STRING
  229            | STRING

  230 listmaker: test list_for
  231          | test star_COMMA_test

  232 testlist_comp: test comp_for
  233              | test star_COMMA_test

  234 lambdef: LAMBDA varargslist COLON test
  235        | LAMBDA COLON test

  236 trailer: LPAR opt_arglist RPAR
  237        | LSQB subscriptlist RSQB
  238        | DOT NAME

  239 subscriptlist: subscript star_COMMA_subscript

  240 subscript: DOT DOT DOT
  241          | test
  242          | opt_test_only COLON opt_test_only opt_sliceop

  243 opt_test_only: test
  244              | %empty

  245 opt_sliceop: sliceop
  246            | %empty

  247 sliceop: COLON test
  248        | COLON

  249 exprlist: expr star_COMMA_expr

  250 testlist: test star_COMMA_test

  251 dictorsetmaker: test COLON test pick_comp_for
  252               | test pick_for_test

  253 pick_comp_for: comp_for
  254              | star_test_COLON_test

  255 pick_for_test: comp_for
  256              | star_COMMA_test

  257 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  258         | CLASS NAME COLON suite

  259 opt_testlist: testlist
  260             | %empty

  261 arglist: argument COMMA arglist
  262        | argument COMMA
  263        | argument
  264        | listarg COMMA arglist_postlist
  265        | listarg
  266        | dictarg

  267 argument: test opt_comp_for
  268         | test EQUAL test

  269 opt_comp_for: comp_for
  270             | %empty

  271 list_iter: list_for
  272          | list_if

  273 list_for: FOR exprlist IN testlist_safe list_iter
  274         | FOR exprlist IN testlist_safe

  275 list_if: IF old_test list_iter
  276        | IF old_test

  277 comp_iter: comp_for
  278          | comp_if

  279 comp_for: FOR exprlist IN or_test comp_iter
  280         | FOR exprlist IN or_test

  281 comp_if: IF old_test comp_iter
  282        | IF old_test

  283 testlist1: test
  284          | testlist1 COMMA test

  285 encoding_decl: NAME

  286 yield_expr: YIELD testlist
  287           | YIELD

  288 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  289                  | COMMA
  290                  | %empty

  291 star_COMMA_expr: COMMA expr star_COMMA_expr
  292                | COMMA
  293                | %empty

  294 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  295                 | COMMA
  296                 | %empty

  297 star_COMMA_test: COMMA test star_COMMA_test
  298                | COMMA
  299                | %empty

  300 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  301                     | COMMA
  302                     | %empty

  303 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  304                     | COMMA
  305                     | %empty

  306 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  307                          | COMMA
  308                          | %empty

  309 plus_COMMA_test: COMMA test plus_COMMA_test
  310                | COMMA test COMMA
  311                | COMMA test

  312 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  313                    | COMMA old_test COMMA
  314                    | COMMA old_test

  315 dictarg: DOUBLESTAR test

  316 listarg: STAR test

  317 arglist_postlist: argument COMMA arglist_postlist
  318                 | dictarg
  319                 | argument

  320 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  321                        | SEMI
  322                        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 58
AMPERSAND (259) 189
AND (260) 168
AS (261) 101 103 143 147
ASSERT (262) 114 115
AT (263) 11 12
BACKQUOTE (264) 216
BAR (265) 185
BREAK (266) 78
CIRCUMFLEX (267) 187
CIRCUMFLEXEQUAL (268) 60
CLASS (269) 257 258
COLON (270) 19 124 125 126 128 129 130 131 132 133 134 135 136 138
    140 159 160 234 235 242 247 248 251 257 258 300
COMMA (271) 26 28 85 87 107 110 114 141 148 261 262 264 284 288 289
    291 292 294 295 297 298 300 301 303 304 306 307 309 310 311 312
    313 314 317
CONTINUE (272) 79
DEDENT (273) 152
DEF (274) 19
DEL (275) 71
DOT (276) 94 96 97 109 238 240
DOUBLESLASH (277) 203
DOUBLESLASHEQUAL (278) 64
DOUBLESTAR (279) 28 31 209 315
DOUBLESTAREQUAL (280) 63
ELIF (281) 126
ELSE (282) 124 128 130 136 163
ENDMARKER (283) 6
EQEQUAL (284) 175
EQUAL (285) 24 51 268
EXCEPT (286) 145 146
EXEC (287) 112 113
FINALLY (288) 133 138
FOR (289) 130 131 273 274 279 280
FROM (290) 92 93
GLOBAL (291) 111
GREATER (292) 174
GREATEREQUAL (293) 176
GRLT (294) 178
IF (295) 124 125 163 275 276 281 282
IMPORT (296) 91 92 93
IN (297) 112 130 131 180 181 273 274 279 280
INDENT (298) 152
IS (299) 182 183
LAMBDA (300) 159 160 234 235
LBRACE (301) 215
LEFTSHIFT (302) 192
LEFTSHIFTEQUAL (303) 61
LESS (304) 173
LESSEQUAL (305) 177
LPAR (306) 11 20 21 33 99 213 236 257
LSQB (307) 214 237
MINEQUAL (308) 54
MINUS (309) 197 207
NAME (310) 19 28 30 31 32 101 102 103 108 109 110 111 217 238 257 258
    285
NEWLINE (311) 4 7 11 12 37 152
NOT (312) 169 181 183
NOTEQUAL (313) 179
OR (314) 166
PASS (315) 72
PERCENT (316) 202
PERCENTEQUAL (317) 57
PLUS (318) 196 206
PLUSEQUAL (319) 53
PRINT (320) 65 66
RAISE (321) 83 84
RBRACE (322) 215
RETURN (323) 80 81
RIGHTSHIFT (324) 66 193
RIGHTSHIFTEQUAL (325) 62
RPAR (326) 11 20 21 33 99 213 236 257
RSQB (327) 214 237
SEMI (328) 320 321
SLASH (329) 201
SLASHEQUAL (330) 56
STAR (331) 30 98 200 316
STAREQUAL (332) 55
STRING (333) 228 229
TILDE (334) 208
TRY (335) 132 133
VBAREQUAL (336) 59
WHILE (337) 128 129
WITH (338) 140
YIELD (339) 286 287
NUMBER (340) 218


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
start (87)
    on left: 1 2 3, on right: 0
single_input (88)
    on left: 4 5, on right: 3
file_input (89)
    on left: 6, on right: 1
pick_NEWLINE_stmt (90)
    on left: 7 8, on right: 9
star_NEWLINE_stmt (91)
    on left: 9 10, on right: 6 9
decorator (92)
    on left: 11 12, on right: 15 16
opt_arglist (93)
    on left: 13 14, on right: 11 236
decorators (94)
    on left: 15 16, on right: 15 17 18
decorated (95)
    on left: 17 18, on right: 123
funcdef (96)
    on left: 19, on right: 18 121
parameters (97)
    on left: 20 21, on right: 19
varargslist (98)
    on left: 22 23, on right: 20 159 234
opt_EQUAL_test (99)
    on left: 24 25, on right: 23 26 294
star_fpdef_COMMA (100)
    on left: 26 27, on right: 22 26
opt_DOUBLESTAR_NAME (101)
    on left: 28 29, on right: 30
pick_STAR_DOUBLESTAR (102)
    on left: 30 31, on right: 22
fpdef (103)
    on left: 32 33, on right: 23 26 34 288 294
fplist (104)
    on left: 34, on right: 33
stmt (105)
    on left: 35 36, on right: 5 8 153 154
simple_stmt (106)
    on left: 37, on right: 35 151
small_stmt (107)
    on left: 38 39 40 41 42 43 44 45 46, on right: 37 320
expr_stmt (108)
    on left: 47 48, on right: 38
pick_yield_expr_testlist (109)
    on left: 49 50, on right: 47 51
star_EQUAL (110)
    on left: 51 52, on right: 48 51
augassign (111)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64, on right: 47
print_stmt (112)
    on left: 65 66, on right: 39
opt_test (113)
    on left: 67 68, on right: 65
opt_test_2 (114)
    on left: 69 70, on right: 66
del_stmt (115)
    on left: 71, on right: 40
pass_stmt (116)
    on left: 72, on right: 41
flow_stmt (117)
    on left: 73 74 75 76 77, on right: 42
break_stmt (118)
    on left: 78, on right: 73
continue_stmt (119)
    on left: 79, on right: 74
return_stmt (120)
    on left: 80 81, on right: 75
yield_stmt (121)
    on left: 82, on right: 77
raise_stmt (122)
    on left: 83 84, on right: 76
opt_COMMA_test (123)
    on left: 85 86, on right: 87 112
opt_test_3 (124)
    on left: 87 88, on right: 83
import_stmt (125)
    on left: 89 90, on right: 43
import_name (126)
    on left: 91, on right: 89
import_from (127)
    on left: 92 93, on right: 90
star_DOT (128)
    on left: 94 95, on right: 92 94
plus_DOT (129)
    on left: 96 97, on right: 93 96
pick_STAR_import (130)
    on left: 98 99 100, on right: 92 93
import_as_name (131)
    on left: 101 102, on right: 105 306
dotted_as_name (132)
    on left: 103 104, on right: 106 107
import_as_names (133)
    on left: 105, on right: 99 100
dotted_as_names (134)
    on left: 106 107, on right: 91 107
dotted_name (135)
    on left: 108 109, on right: 11 12 92 103 104 109
global_stmt (136)
    on left: 110 111, on right: 44 110
exec_stmt (137)
    on left: 112 113, on right: 45
assert_stmt (138)
    on left: 114 115, on right: 46
compound_stmt (139)
    on left: 116 117 118 119 120 121 122 123, on right: 36
if_stmt (140)
    on left: 124 125, on right: 116
star_ELIF (141)
    on left: 126 127, on right: 124 125 126
while_stmt (142)
    on left: 128 129, on right: 117
for_stmt (143)
    on left: 130 131, on right: 118
try_stmt (144)
    on left: 132 133, on right: 119
plus_except (145)
    on left: 134 135, on right: 132 134
opt_ELSE (146)
    on left: 136 137, on right: 132
opt_FINALLY (147)
    on left: 138 139, on right: 132
with_stmt (148)
    on left: 140, on right: 120
star_COMMA_with_item (149)
    on left: 141 142, on right: 140 141
with_item (150)
    on left: 143 144, on right: 140 141
except_clause (151)
    on left: 145 146, on right: 134 135
pick_AS_COMMA (152)
    on left: 147 148, on right: 149
opt_AS_COMMA (153)
    on left: 149 150, on right: 145
suite (154)
    on left: 151 152, on right: 19 124 125 126 128 129 130 131 132
    133 134 135 136 138 140 257 258
plus_stmt (155)
    on left: 153 154, on right: 152 153
testlist_safe (156)
    on left: 155 156, on right: 273 274
old_test (157)
    on left: 157 158, on right: 155 156 159 160 275 276 281 282 312
    313 314
old_lambdef (158)
    on left: 159 160, on right: 158
test (159)
    on left: 161 162, on right: 24 66 67 83 85 87 112 114 115 124 125
    126 128 129 143 144 145 149 163 230 231 232 233 234 235 241 243
    247 250 251 252 267 268 283 284 297 300 309 310 311 315 316
opt_IF_ELSE (160)
    on left: 163 164, on right: 161
or_test (161)
    on left: 165 166, on right: 157 161 163 166 279 280
and_test (162)
    on left: 167 168, on right: 165 166 168
not_test (163)
    on left: 169 170, on right: 167 168 169
comparison (164)
    on left: 171 172, on right: 170 172
comp_op (165)
    on left: 173 174 175 176 177 178 179 180 181 182 183, on right:
    172
expr (166)
    on left: 184 185, on right: 112 113 143 171 172 185 249 291
xor_expr (167)
    on left: 186 187, on right: 184 185 187
and_expr (168)
    on left: 188 189, on right: 186 187 189
shift_expr (169)
    on left: 190 191, on right: 188 189 191
pick_LEFTSHIFT_RIGHTSHIFT (170)
    on left: 192 193, on right: 191
arith_expr (171)
    on left: 194 195, on right: 190 191 195
pick_PLUS_MINUS (172)
    on left: 196 197, on right: 195
term (173)
    on left: 198 199, on right: 194 195 199
pick_multop (174)
    on left: 200 201 202 203, on right: 199
factor (175)
    on left: 204 205, on right: 198 199 204 209
pick_unop (176)
    on left: 206 207 208, on right: 204
power (177)
    on left: 209 210, on right: 205
star_trailer (178)
    on left: 211 212, on right: 209 210 211
atom (179)
    on left: 213 214 215 216 217 218 219, on right: 209 210
pick_yield_expr_testlist_comp (180)
    on left: 220 221, on right: 222
opt_yield_test (181)
    on left: 222 223, on right: 213
opt_listmaker (182)
    on left: 224 225, on right: 214
opt_dictorsetmaker (183)
    on left: 226 227, on right: 215
plus_STRING (184)
    on left: 228 229, on right: 219 228
listmaker (185)
    on left: 230 231, on right: 224
testlist_comp (186)
    on left: 232 233, on right: 221
lambdef (187)
    on left: 234 235, on right: 162
trailer (188)
    on left: 236 237 238, on right: 211
subscriptlist (189)
    on left: 239, on right: 237
subscript (190)
    on left: 240 241 242, on right: 239 303
opt_test_only (191)
    on left: 243 244, on right: 242
opt_sliceop (192)
    on left: 245 246, on right: 242
sliceop (193)
    on left: 247 248, on right: 245
exprlist (194)
    on left: 249, on right: 71 130 131 273 274 279 280
testlist (195)
    on left: 250, on right: 47 48 50 80 130 131 259 286
dictorsetmaker (196)
    on left: 251 252, on right: 226
pick_comp_for (197)
    on left: 253 254, on right: 251
pick_for_test (198)
    on left: 255 256, on right: 252
classdef (199)
    on left: 257 258, on right: 17 122
opt_testlist (200)
    on left: 259 260, on right: 257
arglist (201)
    on left: 261 262 263 264 265 266, on right: 13 261
argument (202)
    on left: 267 268, on right: 261 262 263 317 319
opt_comp_for (203)
    on left: 269 270, on right: 267
list_iter (204)
    on left: 271 272, on right: 273 275
list_for (205)
    on left: 273 274, on right: 230 271
list_if (206)
    on left: 275 276, on right: 272
comp_iter (207)
    on left: 277 278, on right: 279 281
comp_for (208)
    on left: 279 280, on right: 232 253 255 269 277
comp_if (209)
    on left: 281 282, on right: 278
testlist1 (210)
    on left: 283 284, on right: 216 284
encoding_decl (211)
    on left: 285, on right: 2
yield_expr (212)
    on left: 286 287, on right: 49 82 220
star_fpdef_notest (213)
    on left: 288 289 290, on right: 34 288
star_COMMA_expr (214)
    on left: 291 292 293, on right: 249 291
star_COMMA_fpdef (215)
    on left: 294 295 296, on right: 23 294
star_COMMA_test (216)
    on left: 297 298 299, on right: 67 231 233 250 256 297
star_test_COLON_test (217)
    on left: 300 301 302, on right: 254 300
star_COMMA_subscript (218)
    on left: 303 304 305, on right: 239 303
star_COMMA_import_as_name (219)
    on left: 306 307 308, on right: 105 306
plus_COMMA_test (220)
    on left: 309 310 311, on right: 69 309
plus_COMMA_old_test (221)
    on left: 312 313 314, on right: 155 312
dictarg (222)
    on left: 315, on right: 266 318
listarg (223)
    on left: 316, on right: 264 265
arglist_postlist (224)
    on left: 317 318 319, on right: 264 317
small_stmt_STAR_OR_SEMI (225)
    on left: 320 321 322, on right: 37 320


State 0

    0 $accept: . start $end

    ASSERT     shift, and go to state 1
    AT         shift, and go to state 2
    BACKQUOTE  shift, and go to state 3
    BREAK      shift, and go to state 4
    CLASS      shift, and go to state 5
    CONTINUE   shift, and go to state 6
    DEF        shift, and go to state 7
    DEL        shift, and go to state 8
    EXEC       shift, and go to state 9
    FOR        shift, and go to state 10
    FROM       shift, and go to state 11
    GLOBAL     shift, and go to state 12
    IF         shift, and go to state 13
    IMPORT     shift, and go to state 14
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 20
    NEWLINE    shift, and go to state 21
    NOT        shift, and go to state 22
    PASS       shift, and go to state 23
    PLUS       shift, and go to state 24
    PRINT      shift, and go to state 25
    RAISE      shift, and go to state 26
    RETURN     shift, and go to state 27
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    TRY        shift, and go to state 30
    WHILE      shift, and go to state 31
    WITH       shift, and go to state 32
    YIELD      shift, and go to state 33
    NUMBER     shift, and go to state 34

    $default  reduce using rule 10 (star_NEWLINE_stmt)

    start              go to state 35
    single_input       go to state 36
    file_input         go to state 37
    pick_NEWLINE_stmt  go to state 38
    star_NEWLINE_stmt  go to state 39
    decorator          go to state 40
    decorators         go to state 41
    decorated          go to state 42
    funcdef            go to state 43
    stmt               go to state 44
    simple_stmt        go to state 45
    small_stmt         go to state 46
    expr_stmt          go to state 47
    print_stmt         go to state 48
    del_stmt           go to state 49
    pass_stmt          go to state 50
    flow_stmt          go to state 51
    break_stmt         go to state 52
    continue_stmt      go to state 53
    return_stmt        go to state 54
    yield_stmt         go to state 55
    raise_stmt         go to state 56
    import_stmt        go to state 57
    import_name        go to state 58
    import_from        go to state 59
    global_stmt        go to state 60
    exec_stmt          go to state 61
    assert_stmt        go to state 62
    compound_stmt      go to state 63
    if_stmt            go to state 64
    while_stmt         go to state 65
    for_stmt           go to state 66
    try_stmt           go to state 67
    with_stmt          go to state 68
    test               go to state 69
    or_test            go to state 70
    and_test           go to state 71
    not_test           go to state 72
    comparison         go to state 73
    expr               go to state 74
    xor_expr           go to state 75
    and_expr           go to state 76
    shift_expr         go to state 77
    arith_expr         go to state 78
    term               go to state 79
    factor             go to state 80
    pick_unop          go to state 81
    power              go to state 82
    atom               go to state 83
    plus_STRING        go to state 84
    lambdef            go to state 85
    testlist           go to state 86
    classdef           go to state 87
    encoding_decl      go to state 88
    yield_expr         go to state 89


State 1

  114 assert_stmt: ASSERT . test COMMA test
  115            | ASSERT . test

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 90
    NOT        shift, and go to state 22
    PLUS       shift, and go to state 24
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    NUMBER     shift, and go to state 34

    test         go to state 91
    or_test      go to state 70
    and_test     go to state 71
    not_test     go to state 72
    comparison   go to state 73
    expr         go to state 74
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85


State 2

   11 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 92

    dotted_name  go to state 93


State 3

  216 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 90
    NOT        shift, and go to state 22
    PLUS       shift, and go to state 24
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    NUMBER     shift, and go to state 34

    test         go to state 94
    or_test      go to state 70
    and_test     go to state 71
    not_test     go to state 72
    comparison   go to state 73
    expr         go to state 74
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85
    testlist1    go to state 95


State 4

   78 break_stmt: BREAK .

    $default  reduce using rule 78 (break_stmt)


State 5

  257 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  258         | CLASS . NAME COLON suite

    NAME  shift, and go to state 96


State 6

   79 continue_stmt: CONTINUE .

    $default  reduce using rule 79 (continue_stmt)


State 7

   19 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 97


State 8

   71 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 90
    PLUS       shift, and go to state 24
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    NUMBER     shift, and go to state 34

    expr         go to state 98
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    exprlist     go to state 99


State 9

  112 exec_stmt: EXEC . expr IN test opt_COMMA_test
  113          | EXEC . expr

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 90
    PLUS       shift, and go to state 24
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    NUMBER     shift, and go to state 34

    expr         go to state 100
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84


State 10

  130 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  131         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 90
    PLUS       shift, and go to state 24
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    NUMBER     shift, and go to state 34

    expr         go to state 98
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    exprlist     go to state 101


State 11

   92 import_from: FROM . star_DOT dotted_name IMPORT pick_STAR_import
   93            | FROM . plus_DOT IMPORT pick_STAR_import

    DOT  shift, and go to state 102

    $default  reduce using rule 95 (star_DOT)

    star_DOT  go to state 103
    plus_DOT  go to state 104


State 12

  111 global_stmt: GLOBAL . NAME

    NAME  shift, and go to state 105


State 13

  124 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  125        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 15
    LBRACE     shift, and go to state 16
    LPAR       shift, and go to state 17
    LSQB       shift, and go to state 18
    MINUS      shift, and go to state 19
    NAME       shift, and go to state 90
    NOT        shift, and go to state 22
    PLUS       shift, and go to state 24
    STRING     shift, and go to state 28
    TILDE      shift, and go to state 29
    NUMBER     shift, and go to state 34

    test         go to state 106
    or_test      go to state 70
    and_test     go to state 71
    not_test     go to state 72
    comparison   go to state 73
    expr         go to state 74
    xor_expr     go to state 75
    and_expr     go to state 76
    shift_expr   go to state 77
    arith_expr   go to state 78
    term         go to state 79
    factor       go to state 80
    pick_unop    go to state 81
    power        go to state 82
    atom         go to state 83
    plus_STRING  go to state 84
    lambdef      go to state 85


State 14

   91 import_name: IMPORT . dotted_as_names

    NAME  shift, and go to state 92

    dotted_as_name   go to state 107
    dotted_as_names  go to state 108
    dotted_name      go to state 109


State 15

  234 lambdef: LAMBDA . varargslist COLON test
  235        | LAMBDA . COLON test
